--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,11 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+   path: /
+   controller: App\Controller\TestController::index
+
+test:
+  path: /test/{age<\d+>?0}
+  controller: App\Controller\TestController::test
+  # defaults:
+  #   age: 0
+  # requirements:
+  #   age: \d+
