container de services fini

--- a/e-commerce/config/services.yaml
+++ b/e-commerce/config/services.yaml
@@ -34,4 +34,8 @@ services:
         arguments:
             $tva: 20
 
+    App\Controller\Taxes\Detector:
+        arguments:
+            $seuil: 100
+
     Cocur\Slugify\Slugify: ~        
