--- a/e-commerce/composer.json
+++ b/e-commerce/composer.json
@@ -8,6 +8,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "cocur/slugify": "^4.3",
+        "doctrine/doctrine-bundle": "^2.9",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.14",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
