--- a/e-commerce/composer.json
+++ b/e-commerce/composer.json
@@ -7,6 +7,7 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "bluemmb/faker-picsum-photos-provider": "^2.0",
         "cocur/slugify": "^4.3",
         "doctrine/doctrine-bundle": "^2.9",
         "doctrine/doctrine-migrations-bundle": "^3.2",
@@ -68,7 +69,7 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "fixtures": [
+         "fixtures": [ 
             "php bin/console d:d:d --force",
             "php bin/console d:d:c",
             "php bin/console d:s:u --force",
