--- a/e-commerce/composer.json
+++ b/e-commerce/composer.json
@@ -19,6 +19,7 @@
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/framework-bundle": "5.4.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "5.4.*",
         "symfony/twig-bundle": "5.4.*",
         "symfony/yaml": "5.4.*",
@@ -28,7 +29,10 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "fakerphp/faker": "1.13",
-        "symfony/maker-bundle": "^1.48"
+        "symfony/debug-bundle": "5.4.*",
+        "symfony/maker-bundle": "^1.48",
+        "symfony/stopwatch": "5.4.*",
+        "symfony/web-profiler-bundle": "5.4.*"
     },
     "config": {
         "allow-plugins": {
