--- a/e-commerce/composer.json
+++ b/e-commerce/composer.json
@@ -18,6 +18,7 @@
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
+        "symfony/form": "5.4.*",
         "symfony/framework-bundle": "5.4.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "5.4.*",
