en cours autorisation

--- a/e-commerce/config/packages/security.yaml
+++ b/e-commerce/config/packages/security.yaml
@@ -17,12 +17,13 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-            # custom_authenticator: App\Security\LoginFormAuthenticator
-            form_login:
-                login_path: security_login
-                check_path: security_login
-                username_parameter: login[email]
-                password_parameter: login[password]
+            custom_authenticator: App\Security\LoginFormAuthenticator
+
+        # form_login:
+        #     login_path: security_login
+        #     check_path: security_login
+        #     username_parameter: login[email]
+        #     password_parameter: login[password]
 
             logout:
                 path: security_logout 
