décrémenter le panier en cours

--- a/e-commerce/config/services.yaml
+++ b/e-commerce/config/services.yaml
@@ -38,4 +38,7 @@ services:
         arguments:
             $seuil: 100
 
-    Cocur\Slugify\Slugify: ~        
+    Cocur\Slugify\Slugify: ~   
+
+    App\cart\CartItem:
+        $qty: "%qty%"
