--- a/e-commerce/config/packages/twig.yaml
+++ b/e-commerce/config/packages/twig.yaml
@@ -4,6 +4,7 @@ twig:
         - bootstrap_4_layout.html.twig
     globals:
         categoryRepository: "@App\\Repository\\CategoryRepository"
+        cartService: "@App\\cart\\CartService"
 
 when@test:
     twig:
