--- a/e-commerce/composer.json
+++ b/e-commerce/composer.json
@@ -15,6 +15,7 @@
         "liorchamla/faker-prices": "^2.0",
         "mbezhanov/faker-provider-collection": "^2.0",
         "sensio/framework-extra-bundle": "^6.2",
+        "stripe/stripe-php": "^10.14",
         "symfony/console": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
