--- a/e-commerce/composer.json
+++ b/e-commerce/composer.json
@@ -17,6 +17,7 @@
         "sensio/framework-extra-bundle": "^6.2",
         "stripe/stripe-php": "^10.14",
         "symfony/console": "5.4.*",
+        "symfony/dependency-injection": "5.4.*",
         "symfony/dotenv": "5.4.*",
         "symfony/flex": "^1.17|^2",
         "symfony/form": "5.4.*",
