--- a/e-commerce-formation/.env
+++ b/e-commerce-formation/.env
@@ -24,7 +24,7 @@ APP_SECRET=17d3ea3af33f9b9211b60c3a4549c068
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/symshop?serverVersion=8.0.30&charset=utf8mb4"
+DATABASE_URL="mysql://mohamed:1234@127.0.0.1:3306/symshop?serverVersion=8.0.30&charset=utf8mb4"
 # DATABASE_URL="mysql://root:1234@localhost:3306/symshop?serverVersion=8.0.30&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
