--- a/e-commerce-formation/composer.json
+++ b/e-commerce-formation/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "fakerphp/faker": "1.13",
+        "fakerphp/faker": "*",
         "symfony/debug-bundle": "5.4.*",
         "symfony/maker-bundle": "^1.48",
         "symfony/stopwatch": "5.4.*",
